<resources>
    <string name="app_name">InnoCV Project</string>
    <string name="title_users">Users</string>
    <string name="title_add_user">Add user</string>
    <string name="title_settings">Settings</string>
    <string name="title_user_detail">User detail</string>
    <string name="user_detail_button_delete">Delete user</string>
    <string name="settings_button_test_server">Test server</string>
    <string name="settings_dropdown_choose_language">Choose language</string>
    <string name="home_textinput_search_hint">Username</string>
    <string name="add_user_textinput_birthdate_hint">Birthdate</string>
    <string name="add_user_button_create_user">Create user</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="user_detail_user_removed">User removed.</string>
    <string name="user_detail_error_removing_user">Error removing user.</string>
    <string name="settings_conexion_ok">Server connexion works correctly.</string>
    <string name="settings_conexion_error">Error accessing server.</string>
    <string name="add_user_user_created_ok">User created</string>
    <string name="add_user_user_created_error">Error creating user.</string>
</resources>