<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.InnoCVProject.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentAddUserInsertUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_textinput_search_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.InnoCVProject.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentAddUserInsertBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/add_user_textinput_birthdate_hint"
            android:inputType="date"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragmentAddUserButtonCreateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/add_user_button_create_user" />

</LinearLayout>